Fixed library versions

--- a/platformio.ini
+++ b/platformio.ini
@@ -11,9 +11,11 @@
 
 [common_env]
 lib_deps = 
-  Wire
-  OneWire
-  LiquidCrystal
+   OneWire@2.3.4
+   LiquidCrystal@1.0.5
+;  Wire
+;  OneWire
+;  LiquidCrystal
 
 [env:uno]
 platform = atmelavr
