LiquidCrystal is registered multiple times in platformio and we want the one from AdaFruit

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,10 +12,10 @@
 [common_env]
 lib_deps = 
    OneWire@2.3.4
-   LiquidCrystal@1.0.5
-;  Wire
-;  OneWire
-;  LiquidCrystal
+   887@1.0.5
+   ; 887 is LiquidCrystal from Adafruit but LiquidCrystal is
+   ; registered multiple times and the other LiquidCrystal libs
+   ; do not work.
 
 [env:uno]
 platform = atmelavr
